# arcpay-server

./: .gitignore  Cargo.toml  README.md  aws_setup.md  deploy.yaml  psql.sql
src/: contract_owner.rs  main.rs  merkle.rs  mint.rs  model.rs  routes.rs  send_consumer.rs  user_balance.rs
src/merkle/: mod.rs
src/model/: mod.rs
src/transactions/: mod.rs  multicoin.rs  primitive.rs
